correction longueur collapses page about

--- a/src/sass/globalStyle.scss
+++ b/src/sass/globalStyle.scss
@@ -1,7 +1,6 @@
 @use 'variables' as v;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
 
-
 * {
   margin: 0;
   box-sizing: border-box;
@@ -19,11 +18,27 @@
   margin: 0px auto 40px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 500;
 }
 
 ul {
   padding: 0px;
   list-style: none;
+}
+
+.about-container {
+  margin: 0 auto;
+  max-width: 90%;
+}
+
+@media (max-width: 768px) {
+  .about-container {
+    max-width: 100%;
+  }
 }
